--- a/meta-pkgs/boost/Makefile.common
+++ b/meta-pkgs/boost/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.71 2018/01/01 20:36:09 adam Exp $
+# $NetBSD: Makefile.common,v 1.72 2018/04/29 20:41:11 adam Exp $
 #
 # used by devel/boost-build/Makefile
 # used by devel/boost-docs/Makefile
@@ -10,7 +10,7 @@
 
 BOOST_PACKAGE?=		undefined
 BOOST_COMMENT?=		undefined
-BOOST_VERSION=		1.66.0
+BOOST_VERSION=		1.67.0
 BOOST_SHORT_VERSION=	${BOOST_VERSION:S/./_/:C/\..*$//}
 
 # Update mysql57-client/patches/patch-cmake_boost.cmake when updating version
@@ -89,7 +89,7 @@ post-wrapper:
 # We can't do this at post-extract because the extract cookie will get a future
 # timestamp than the sources.  If this happens, print-PLIST does not work.
 pre-configure:
-	cd ${WRKSRC} && ${FIND} . -type f -print | ${XARGS} ${TOUCH}
+	${FIND} ${WRKSRC} -type f -exec ${TOUCH} {} +
 
 # Generate a new user.hpp or use the installed one, depending on the package
 # we are building.
