--- a/graphics/babl/Makefile
+++ b/graphics/babl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2015/12/05 21:27:38 adam Exp $
+# $NetBSD: Makefile,v 1.17 2018/04/29 21:28:58 ryoon Exp $
 
-DISTNAME=	babl-0.1.14
+DISTNAME=	babl-0.1.46
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.gimp.org/pub/babl/0.1/
 EXTRACT_SUFX=	.tar.bz2
