--- a/inputmethod/ibus/Makefile
+++ b/inputmethod/ibus/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.53 2018/04/28 01:40:07 tsutsui Exp $
+# $NetBSD: Makefile,v 1.54 2018/04/29 21:42:00 tsutsui Exp $
 
 .include "Makefile.common"
 
 COMMENT=	Intelligent Input Bus
 
 DEPENDS+=	${PYPKGPREFIX}-gobject3-[0-9]*:../../devel/py-gobject3
-BUILD_DEPENDS+=	cldr-emoji-annotation-[0-9]*:../../textproc/cldr-emoji-annotation
+BUILD_DEPENDS+=	cldr-emoji-annotation>=33.0.0.1:../../textproc/cldr-emoji-annotation
 BUILD_DEPENDS+=	unicode-character-database-[0-9]*:../../textproc/unicode-character-database
 BUILD_DEPENDS+=	unicode-emoji-[0-9]*:../../textproc/unicode-emoji
 
