--- a/devel/boost-headers/Makefile
+++ b/devel/boost-headers/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.46 2018/04/29 20:41:11 adam Exp $
+# $NetBSD: Makefile,v 1.47 2018/04/30 00:21:13 ryoon Exp $
 
 BOOST_PACKAGE=		headers
 BOOST_COMMENT=		(build-time headers)
 BOOST_CONFIG=		generate
 
 .include "../../meta-pkgs/boost/Makefile.common"
+PKGREVISION=		1
 
 BJAM_ARGS+=		--without-\*
 
@@ -14,9 +15,9 @@ NO_BUILD=		yes
 
 do-install: bjam-install
 	${FIND} ${DESTDIR}${PREFIX}/include/boost \
-		-type f -exec ${CHOWN} ${SHAREOWN}:${SHAREGRP} {} +
+		-type f -exec ${CHOWN} ${SHAREOWN}:${SHAREGRP} {} \;
 	${FIND} ${DESTDIR}${PREFIX}/include/boost \
-		-type d -exec ${CHMOD} ${PKGDIRMODE} {} +
+		-type d -exec ${CHMOD} ${PKGDIRMODE} {} \;
 
 PTHREAD_OPTS+=		require
 .include "../../mk/pthread.buildlink3.mk"
