--- a/converters/orcus/Makefile
+++ b/converters/orcus/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2018/04/29 21:31:30 adam Exp $
+# $NetBSD: Makefile,v 1.23 2018/04/30 04:39:41 ryoon Exp $
 
-DISTNAME=	liborcus-0.13.3
+DISTNAME=	liborcus-0.13.4
 PKGNAME=	${DISTNAME:S/liborcus/orcus/}
-PKGREVISION=	1
 CATEGORIES=	converters
 MASTER_SITES=	http://kohei.us/files/orcus/src/
 EXTRACT_SUFX=	.tar.xz
