--- a/security/xml-security-c/Makefile
+++ b/security/xml-security-c/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2017/09/17 09:33:59 abs Exp $
+# $NetBSD: Makefile,v 1.18 2018/04/30 05:25:24 ryoon Exp $
 
 DISTNAME=	xml-security-c-1.7.3
 CATEGORIES=	security devel
@@ -15,7 +15,7 @@ USE_TOOLS+=	gmake pkg-config
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV+=	XERCESCROOT="${BUILDLINK_PREFIX.xerces-c}"
 
-BUILDLINK_API_DEPENDS.openssl+= openssl>=0.9.7
+BUILDLINK_API_DEPENDS.openssl+= openssl>=1.1
 .include "../../security/openssl/buildlink3.mk"
 .include "../../textproc/xerces-c/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
