--- a/converters/py-simplejson/Makefile
+++ b/converters/py-simplejson/Makefile
@@ -1,16 +1,14 @@
-# $NetBSD: Makefile,v 1.34 2017/11/28 11:01:11 adam Exp $
+# $NetBSD: Makefile,v 1.35 2018/04/30 06:41:52 adam Exp $
 
-DISTNAME=	simplejson-3.13.2
+DISTNAME=	simplejson-3.14.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	converters python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/simplejson/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://undefined.org/python/#simplejson
-COMMENT=	Simplejson is a simple, fast, extensible JSON encoder/decoder
+HOMEPAGE=	https://github.com/simplejson/simplejson
+COMMENT=	Simple, fast, complete and extensible JSON encoder/decoder
 LICENSE=	mit
-
-USE_LANGUAGES=	c
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
