--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.65 2018/04/30 00:27:32 ryoon Exp $
+# $NetBSD: Makefile,v 1.66 2018/04/30 07:09:57 ryoon Exp $
 
 BOOST_PACKAGE=		libs
 BOOST_COMMENT=		(binary libraries)
@@ -23,7 +23,7 @@ BJAM_ARGS+=		--without-coroutine2
 BJAM_ARGS+=		--without-fiber
 .else
 PLIST.context=		yes
-.if ${OPSYS} != "NetBSD"
+.if !(${OPSYS} == "NetBSD" && !empty(PKGSRC_COMPILER:Mgcc))
 PLIST.fiber=		yes
 .endif
 .endif
