--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.66 2018/04/30 07:09:57 ryoon Exp $
+# $NetBSD: Makefile,v 1.67 2018/04/30 09:18:47 martin Exp $
 
 BOOST_PACKAGE=		libs
 BOOST_COMMENT=		(binary libraries)
@@ -19,7 +19,6 @@ BJAM_ARGS+=		pch=off
 .if !empty(MACHINE_ARCH:Malpha) || !empty(MACHINE_ARCH:Mm68k) || !empty(MACHINE_ARCH:Msparc64)
 BJAM_ARGS+=		--without-context
 BJAM_ARGS+=		--without-coroutine
-BJAM_ARGS+=		--without-coroutine2
 BJAM_ARGS+=		--without-fiber
 .else
 PLIST.context=		yes
