--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1212 2018/04/28 01:24:40 minskim Exp $
+# $NetBSD: Makefile,v 1.1213 2018/04/30 10:14:45 wiz Exp $
 #
 
 COMMENT=	Networking tools
@@ -863,6 +863,7 @@ SUBDIR+=	unifi
 SUBDIR+=	unison
 SUBDIR+=	unison2.32
 SUBDIR+=	unison2.40
+SUBDIR+=	unison2.51
 SUBDIR+=	unworkable
 SUBDIR+=	upclient
 SUBDIR+=	upnpinspector
