--- a/security/libgpg-error/Makefile
+++ b/security/libgpg-error/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.62 2018/04/12 06:56:17 adam Exp $
+# $NetBSD: Makefile,v 1.63 2018/04/30 10:34:23 wiz Exp $
 
-DISTNAME=	libgpg-error-1.29
+DISTNAME=	libgpg-error-1.30
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.gnupg.org/gcrypt/libgpg-error/
 MASTER_SITES+=	ftp://ftp.ring.gr.jp/pub/net/gnupg/libgpg-error/
@@ -29,27 +29,8 @@ CONFIGURE_ENV+=		CC_FOR_BUILD=${NATIVE_CC:Q}
 CONFIGURE_ENV+=		CC_FOR_BUILD=${CC:Q}\ ${CFLAGS:M*:Q}
 .endif
 
-# XXX See HACKS
-.if ${OPSYS} == "IRIX" || !empty(MACHINE_PLATFORM:MNetBSD-[3-9]*)
-USE_TOOLS+=		awk
-.else
-USE_TOOLS+=		gawk
-.endif
-
-LDFLAGS.SunOS+=		-lsocket
-
 .if !empty(MACHINE_PLATFORM:MSunOS-5.10-*)
 LIBS+=	-lrt
-.endif
-
-# On Dragonfly i386, Pkgsrc libintl segfaults on bindtextdomain function
-# while locking a thread.  Until that's resolved, stop libgpg-error from
-# using NLS which invokes that function during initialization.
-PLIST_VARS+=		nls
-.if ${OPSYS} == "DragonFly" && ${MACHINE} == "i386"
-CONFIGURE_ARGS+=	--disable-nls
-.else
-PLIST.nls=		yes
 .endif
 
 TEST_TARGET=		check
