--- a/graphics/mypaint-brushes/Makefile
+++ b/graphics/mypaint-brushes/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2018/04/30 04:56:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.2 2018/04/30 20:56:11 wiz Exp $
 
 DISTNAME=	mypaint-brushes-1.3.0
 PKGNAME=	${GITHUB_PROJECT}-${DISTNAME}
@@ -11,6 +11,8 @@ MAINTAINER=	ryoon@NetBSD.org
 HOMEPAGE=	https://github.com/Jehan/mypaint-brushes/
 COMMENT=	Default MyPaint brushes
 LICENSE=	cc0-1.0-universal
+
+BUILD_DEPENDS+=	scons-[0-9]*:../../devel/scons
 
 USE_TOOLS+=	pkg-config
 USE_LANGUAGES=	# none
