--- a/graphics/babl/Makefile
+++ b/graphics/babl/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2018/04/29 21:28:58 ryoon Exp $
+# $NetBSD: Makefile,v 1.18 2018/05/01 20:26:38 martin Exp $
 
 DISTNAME=	babl-0.1.46
+PKGREVISION=	1
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.gimp.org/pub/babl/0.1/
 EXTRACT_SUFX=	.tar.bz2
