--- a/www/py-yarl/Makefile
+++ b/www/py-yarl/Makefile
@@ -1,18 +1,21 @@
-# $NetBSD: Makefile,v 1.10 2018/02/20 09:29:05 adam Exp $
+# $NetBSD: Makefile,v 1.11 2018/05/02 07:07:41 adam Exp $
 
-DISTNAME=	yarl-1.1.1
+DISTNAME=	yarl-1.2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=y/yarl/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/aio-libs/yarl/
+HOMEPAGE=	https://github.com/aio-libs/yarl
 COMMENT=	Yet another URL library
 LICENSE=	apache-2.0
 
-DEPENDS+=	${PYPKGPREFIX}-multidict>=2.0:../../databases/py-multidict
+DEPENDS+=	${PYPKGPREFIX}-idna>=2.0:../../www/py-idna
+DEPENDS+=	${PYPKGPREFIX}-multidict>=4.0:../../databases/py-multidict
+BUILD_DEPENDS+=	${PYPKGPREFIX}-test-runner-[0-9]*:../../devel/py-test-runner
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+PYTHON_VERSIONS_INCOMPATIBLE=	27 34
 
 .include "../../devel/py-cython/buildlink3.mk"
 .include "../../lang/python/egg.mk"
