--- a/devel/p5-autobox/Makefile
+++ b/devel/p5-autobox/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2017/06/05 14:23:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2018/05/02 12:19:01 wiz Exp $
 
-DISTNAME=	autobox-2.85
+DISTNAME=	autobox-2.86
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=autobox/}
 
@@ -11,9 +10,10 @@ HOMEPAGE=	http://search.cpan.org/dist/autobox/
 COMMENT=	Perl 5 module to add methods on native types
 LICENSE=	${PERL5_LICENSE}
 
-PERL5_PACKLIST=	auto/autobox/.packlist
-
 DEPENDS+=	p5-Scope-Guard>=0.20:../../devel/p5-Scope-Guard
+DEPENDS+=	p5-IPC-System-Simple-[0-9]*:../../devel/p5-IPC-System-Simple
+
+PERL5_PACKLIST=	auto/autobox/.packlist
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
