--- a/devel/p5-bareword-filehandles/Makefile
+++ b/devel/p5-bareword-filehandles/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2017/06/05 14:23:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.8 2018/05/02 12:20:05 wiz Exp $
 
-DISTNAME=	bareword-filehandles-0.005
+DISTNAME=	bareword-filehandles-0.006
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/I/IL/ILMARI/}
 
