--- a/lang/nodejs6/Makefile
+++ b/lang/nodejs6/Makefile
@@ -1,6 +1,8 @@
-# $NetBSD: Makefile,v 1.25 2018/05/03 10:29:16 fhajny Exp $
+# $NetBSD: Makefile,v 1.26 2018/05/03 21:12:23 fhajny Exp $
 
 DISTNAME=	node-v6.14.2
+
+.include "options.mk"
 
 .include "../../lang/nodejs/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
