--- a/lang/nodejs8/Makefile
+++ b/lang/nodejs8/Makefile
@@ -1,9 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2018/05/02 16:33:02 fhajny Exp $
+# $NetBSD: Makefile,v 1.11 2018/05/03 21:12:23 fhajny Exp $
 
 DISTNAME=	node-v8.11.1
 
 # Stated by the changelog as of 8.2.0
 GCC_REQD+=	4.9.4
+
+.include "options.mk"
 
 CONFIGURE_ARGS+=	--with-intl=system-icu
 
