--- a/databases/sqlrelay-nodejs/Makefile
+++ b/databases/sqlrelay-nodejs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2018/04/29 21:31:31 adam Exp $
+# $NetBSD: Makefile,v 1.14 2018/05/04 14:26:42 fhajny Exp $
 
 PKGNAME=		${DISTNAME:S/sqlrelay/sqlrelay-nodejs/}
 PKGREVISION=		4
@@ -8,11 +8,13 @@ COMMENT=		node.js API for SQL Relay
 
 USE_LANGUAGES+=		c++11
 
-DEPENDS+=		nodejs-[0-9]*:../../lang/nodejs
-
 LICENSE=		gnu-lgpl-v2
 
-CONFIGURE_ARGS+=	--with-nodejs-prefix=${PREFIX}
+BUILD_DEPENDS+=		npm-[0-9]*:../../lang/npm
+
+NODE_VERSIONS_ACCEPTED=	8 6
+
+CONFIGURE_ARGS+=	--with-nodejs-prefix=${BUILDLINK_PREFIX.nodejs}
 CONFIGURE_ARGS+=	--disable-postgresql
 CONFIGURE_ARGS+=	--disable-sqlite
 CONFIGURE_ARGS+=	--disable-freetds
@@ -24,5 +26,6 @@ BUILD_DIRS=		src/api/nodejs
 CHECK_WRKREF_SKIP+=	lib/node_modules/sqlrelay/sqlrelay.node
 
 .include "../../databases/sqlrelay/buildlink3.mk"
+.include "../../lang/nodejs/nodeversion.mk"
 .include "../../lang/python/tool.mk"
 .include "../../mk/bsd.pkg.mk"
